# doc.flow

./: .env.example  .env.prod.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.railway  pyproject.toml  start-railway.sh
backend/app/: __init__.py  main.py
backend/app/api/: actions.py  jobs.py  progress.py  upload.py
backend/app/core/: config.py  database.py  redis.py
backend/app/models/: __init__.py  audit_log.py  document.py  job.py  result.py
backend/app/schemas/: document.py  job.py  result.py
backend/app/services/: audit_svc.py  document_svc.py  export_svc.py  job_svc.py  result_svc.py  storage.py
backend/app/workers/: celery_app.py  publisher.py  tasks.py
backend/tests/: test_export_svc.py  test_extract.py  test_jobs_api.py
frontend/: Caddyfile.railway  Dockerfile.railway  index.html  nginx.railway.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  styles.css
frontend/src/components/: JobDetail.tsx
frontend/src/hooks/: useJobProgress.ts
uploads/: .gitkeep
