[project]
name = "docflow-backend"
version = "0.1.0"
description = "Async document processing backend scaffold"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "celery[redis]>=5.4.0",
  "fastapi>=0.115.0",
  "pydantic>=2.7,<3.0",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.8",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.6"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
